--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -132,6 +132,13 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
+           <widget class="QPushButton" name="pushButton_2">
+            <property name="text">
+             <string>PushButton</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QLabel" name="label">
             <property name="text">
              <string> Temperature min-max </string>
@@ -202,10 +209,114 @@
       </item>
       <item>
        <widget class="QSlider" name="horizontalSlider_posFocus">
+        <property name="value">
+         <number>75</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSlider" name="horizontalSlider_Thresh">
+        <property name="maximum">
+         <number>255</number>
+        </property>
+        <property name="value">
+         <number>100</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <widget class="QComboBox" name="comboBox_Method">
+          <item>
+           <property name="text">
+            <string>CV_CHAIN_APPROX_NONE  </string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>CV_CHAIN_APPROX_SIMPLE</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>CV_CHAIN_APPROX_TC89_L1</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>CV_CHAIN_APPROX_TC89_KCOS</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>CV_LINK_RUNS</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkBox_DetectionThermalArea">
+          <property name="text">
+           <string>Detection Thremal Area</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkBox_Blur">
+          <property name="text">
+           <string>Blur</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkBox_DrawCountur">
+          <property name="text">
+           <string>Draw Countur</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkBox_DrawArea">
+          <property name="text">
+           <string>Draw_Area</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkBox_InvertMask">
+          <property name="text">
+           <string>Invert Mask</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
