--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>876</width>
     <height>600</height>
    </rect>
   </property>
@@ -240,6 +240,13 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_5">
         <item>
+         <widget class="QCheckBox" name="checkBox_PoinThermal">
+          <property name="text">
+           <string>Point Thermal</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QComboBox" name="comboBox_Method">
           <item>
            <property name="text">
@@ -316,6 +323,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QCheckBox" name="checkBox_Analitics">
+          <property name="text">
+           <string>Analitics</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
@@ -334,7 +348,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>876</width>
      <height>22</height>
     </rect>
    </property>
